--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ hiltCompose = "1.2.0"
 org-jetbrains-kotlin-android = "1.8.10"
 org-jetbrains-kotlin-jvm = "2.0.0"
 hiltNavigationCompose = "1.2.0"
+accompanistVersion = "0.30.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ datastore = { module = "androidx.datastore:datastore-preferences", version.ref =
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+accompanist-systemuicontroller = { group = "com.google.accompanist", name = "accompanist-systemuicontroller", version.ref = "accompanistVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
