--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/App.Starting.Theme"
-        tools:targetApi="31">
+        android:theme="@style/App.Starting.Theme">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -27,5 +26,17 @@
             </intent-filter>
         </activity>
     </application>
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.BROWSABLE"/>
+            <data android:scheme="https"/>
+        </intent>
+
+        <intent>
+            <action android:name="android.intent.action.SEND"/>
+        </intent>
+    </queries>
 
 </manifest>
