chore/#17: room 의존성 추가

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ moshiVersion = "1.15.1"
 retrofitVersion = "2.11.0"
 gsonVersion = "2.10.1"
 pagingVersion = "3.3.5"
+room = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,6 +53,9 @@ androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", 
 coil = { group = "io.coil-kt", name = "coil", version = "2.4.0" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version = "2.4.0" }
 coil-svg = { group = "io.coil-kt", name = "coil-svg", version = "2.4.0" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
